test/fail/I.say.if.js
I.do('I.say().if() :', function (I) {
  I.say('It is true!').if(false);

  I.sum();
});
